--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,9 @@ spring.datasource.password=
 # ===============================
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+logging.level.org.hibernate.type=TRACE
