--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,11 @@ spring.datasource.password=
 # ===============================
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
 
-logging.level.org.hibernate.type=TRACE
+logging.level.org.hibernate.type.descriptor=TRACE
+logging.level.org.springframework=OFF
+logging.level.root=OFF
