добавил сущности Trial, TrialResult, Template

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.password=
 # ===============================
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
